--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "circles.js": "^0.0.6",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.4",
     "pusher-js": "^8.4.0",
     "vue": "^3.3.4",
