--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,8 @@
 VITE_BACKEND_URL=http://localhost:8000
 VITE_API_URL=http://localhost:8000
-VITE_PUSHER_APP_KEY=your-pusher-key
+VITE_PUSHER_APP_KEY=31c22b8ad71b9152c23c
 VITE_PUSHER_APP_CLUSTER=ap1
+VITE_PUSHER_HOST=
+VITE_PUSHER_PORT=443
+VITE_PUSHER_SCHEME=https
+VITE_ADMIN_REGISTRATION_CODE=PK_ADMIN_2025
